# serica

./: .gitignore  Dockerfile  app.py  gallery.html.j2  pyproject.toml  requirements.txt
.github/: README.md
.github/linters/: commitlint.config.js
.github/workflows/: push.yml
docs/: README.md  about.md  installation.md
