[project]
name = "serica"
version = "0.1.0"
description = "Lightweight Flask gallery server"
readme = ".github/README.md"
requires-python = ">=3.13"
license = { text = "GPL-3.0-or-later" }
dependencies = [
  "Flask",
  "waitress",
]

[tool.uv]
package = false

[tool.mypy]
# phase-2 follow-up: enable strict mode + full annotations per unciae/ai/README.md §21.7
strict = false
