[project]
name = "serica"
version = "0.1.0"
description = "Lightweight Flask gallery server"
readme = ".github/README.md"
requires-python = ">=3.13"
license = { text = "GPL-3.0-or-later" }
dependencies = [
  "Flask",
  "waitress",
]

[dependency-groups]
dev = ["mypy"]

[tool.uv]
package = false

[tool.mypy]
strict = true
files = ["app.py"]
